Carousel is now working correctly. Used bootstrap to hide on mobile devices because it doesn't display correctly.

--- a/Project/Project/static/css/styles.css
+++ b/Project/Project/static/css/styles.css
@@ -17,15 +17,21 @@ body {
 }
 
 #carouselRecentListings {
-	width: 640px;
-	height: 480px;
+	width: 440px;
+	height: 280px;
 	overflow: hidden;
 }
 
 #carouselImage {
-	height: 480px;
+	height: 280px;
 	width: auto;
+	align: center;
 }
+
+.carousel-inner { text-align: center; }
+
+.carousel .item > img { display: inline-block; }
+
 
 #footer {
 	background-color: #f5f5f5;
